2016-09-04  Steven G. Kargl  <kargl@gcc.gnu.org>

PR fortran/77391
	* resolve.c (deferred_requirements): New function to check F2008:C402.
	(resolve_fl_variable,resolve_fl_parameter): Use it.
 
2016-09-04  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/77391
	* gfortran.dg/pr77391.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@239982 138bc75d-0d04-0410-961f-82ee72b054a4